--- a/today.html
+++ b/today.html
@@ -94,38 +94,39 @@
     }
 
     /* Table styling */
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      color: #fff; /* Set text color to white */
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  color: #fff; /* Set text color to white */
+}
 
-    table th, table td {
-      padding: 8px 12px;
-      text-align: center;
-      border: 1px solid #ddd;
-    }
+table th, table td {
+  padding: 8px 12px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
 
-    table th {
-      background-color: #333; /* Dark background for header */
-      color: #fff; /* White text color for the header */
-    }
+table th {
+  background-color: #333; /* Dark background for header */
+  color: #fff; /* White text color for the header */
+}
 
-    table tbody tr:nth-child(even) {
-      background-color: #444; /* Slightly lighter color for even rows */
-    }
+table tbody tr:nth-child(even) {
+  background-color: #444; /* Slightly lighter color for even rows */
+}
 
-    table tbody tr:nth-child(odd) {
-      background-color: #333; /* Dark color for odd rows */
-    }
+table tbody tr:nth-child(odd) {
+  background-color: #333; /* Dark color for odd rows */
+}
 
-    table th, table td {
-      padding: 10px;
-    }
+table th, table td {
+  padding: 10px;
+}
 
-    table th {
-      text-transform: uppercase;
-    }
+table th {
+  text-transform: uppercase;
+}
+
   </style>
 </head>
 <body>
@@ -149,7 +150,7 @@
     
     <a class="tab-link" href="exercises.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2-2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2-2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2-2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
       </svg>
       <span>Exercises</span>
     </a>
@@ -187,30 +188,191 @@
             <input id="steps" type="number">
           </div>
           <div>
-            <label for="water">Water (oz)</label>
-            <input id="water" type="number">
+            <label for="water">Water Intake (L)</label>
+            <input id="water" type="number" step="0.1">
           </div>
           <div>
-            <label for="sleep">Sleep (hours)</label>
-            <input id="sleep" type="number">
+            <label for="sleep">Sleep (Hours)</label>
+            <input id="sleep" type="number" step="0.1">
           </div>
         </div>
+        <button id="submit">Submit</button>
+      </section>
 
-        <button onclick="logFitnessData()">Log</button>
-
+      <!-- Fitness Logs Table -->
+      <section>
+        <h2>Fitness Logs</h2>
         <table>
           <thead>
             <tr>
               <th>Date</th>
               <th>Steps</th>
-              <th>Water (oz)</th>
-              <th>Sleep (hours)</th>
+              <th>Water (L)</th>
+              <th>Sleep (hrs)</th>
+              <th>Edit</th>
+              <th>Delete</th>
             </tr>
           </thead>
-          <tbody id="fitness-table-body"></tbody>
+          <tbody id="log-table">
+            <!-- Log entries will be displayed here -->
+          </tbody>
         </table>
       </section>
     </main>
   </div>
+
+  <script>
+    const editIcon = `<i class="fas fa-edit"></i>`;
+    const deleteIcon = `<i class="fas fa-trash"></i>`;
+
+    let editIndex = -1;
+    let date = JSON.parse(localStorage.getItem("date")) || [];
+    let water = JSON.parse(localStorage.getItem("water")) || [];
+    let steps = JSON.parse(localStorage.getItem("steps")) || [];
+    let sleep = JSON.parse(localStorage.getItem("sleep")) || [];
+
+    const wInput = document.getElementById("water");
+    const eInput = document.getElementById("steps");
+    const sInput = document.getElementById("sleep");
+
+    const submitButton = document.getElementById("submit");
+    const logTable = document.getElementById("log-table");
+
+    function clearInputs() {
+      wInput.value = "";
+      eInput.value = "";
+      sInput.value = "";
+    }
+
+    function addToLocalStorage() {
+      localStorage.setItem("date", JSON.stringify(date));
+      localStorage.setItem("water", JSON.stringify(water));
+      localStorage.setItem("steps", JSON.stringify(steps));
+      localStorage.setItem("sleep", JSON.stringify(sleep));
+    }
+
+    function fillTable() {
+      const tbody = document.getElementById("log-table");
+      let html = "";
+      for (let i = 0; i < date.length; i++) {
+        let d = date[i] || "N/A";
+        let w = water[i] || "N/A";
+        let e = steps[i] || "N/A";
+        let s = sleep[i] || "N/A";
+        html += `
+          <tr>
+            <td>${d}</td>
+            <td>${w}</td>
+            <td>${e}</td>
+            <td>${s}</td>
+            <td><button onclick="activateEdit(${i})" class="edit">${editIcon}</button></td>
+            <td><button onclick="deleteRow(${i})" class="delete">${deleteIcon}</button></td>
+          </tr>
+        `;
+      }
+      tbody.innerHTML = html;
+    }
+
+    function activateEdit(i) {
+      wInput.value = water[i];
+      eInput.value = steps[i];
+      sInput.value = sleep[i];
+      editIndex = i;
+      submitButton.classList.add("hidden");
+    }
+
+    function cancelEdit() {
+      clearInputs();
+      editIndex = -1;
+      submitButton.classList.remove("hidden");
+    }
+
+    function editRow() {
+      if (editIndex === -1) return;
+      water[editIndex] = wInput.value;
+      steps[editIndex] = eInput.value;
+      sleep[editIndex] = sInput.value;
+      fillTable();
+      addToLocalStorage();
+      cancelEdit();
+    }
+
+    function deleteRow(i) {
+      if (!confirm(`Are you sure you want to delete the entry for ${date[i]}?`)) return;
+      date.splice(i, 1);
+      water.splice(i, 1);
+      steps.splice(i, 1);
+      sleep.splice(i, 1);
+      addToLocalStorage();
+      fillTable();
+    }
+
+    submitButton.addEventListener("click", () => {
+      const w = wInput.value;
+      const e = eInput.value;
+      const s = sInput.value;
+      if (!w || !e || !s) {
+        alert("Please fill in all fields.");
+        return;
+      }
+
+      const d = new Date().toLocaleDateString();
+      date.push(d);
+      water.push(w);
+      steps.push(e);
+      sleep.push(s);
+
+      clearInputs();
+      fillTable();
+      addToLocalStorage();
+    });
+
+    fillTable();
+  </script>
+
+  <!-- Particles.js Initialization -->
+  <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": {
+          "value": 80,
+          "density": { "enable": true, "value_area": 800 }
+        },
+        "color": { "value": "#ffffff" },
+        "shape": {
+          "type": "circle",
+          "stroke": { "width": 0, "color": "#000000" }
+        },
+        "opacity": {
+          "value": 0.5,
+          "random": true,
+          "anim": { "enable": true, "speed": 1, "opacity_min": 0.1, "sync": false }
+        },
+        "size": {
+          "value": 3,
+          "random": true,
+          "anim": { "enable": true, "speed": 4, "size_min": 0.1, "sync": false }
+        },
+        "move": {
+          "enable": true,
+          "speed": 2,
+          "direction": "none",
+          "random": true,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+          "attract": { "enable": false, "rotateX": 600, "rotateY": 1200 }
+        }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" },
+          "onclick": { "enable": true, "mode": "push" }
+        }
+      },
+      "retina_detect": true
+    });
+  </script>
 </body>
 </html>
